Use toList instead of collector